<resources>
    <string name="app_name">FootballCalendar</string>
    <string name="action_home">Home</string>
    <string name="action_notification">Notification</string>
    <string name="action_setting">Settings</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_account">Account</string>
    <string name="txt_language">Language</string>
    <string name="txt_vie">Vietnamese</string>
    <string name="txt_eng">English</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_today">Today</string>
    <string name="txt_more">More</string>
    <string name="txt_tournament">Tournament</string>
    <string name="edt_search">Search here</string>
    <string name="calendar">Calendar</string>
    <string name="img">img</string>
    <string name="txt_premier">Premier League</string>
    <string name="txt_champion">Champions League</string>
    <string name="txt_bundes">Bundes Liga</string>
    <string name="txt_laliga">La Liga</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>