<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".Fragment.NotificationFragment">

    <TextView
        android:text="@string/action_notification"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvToday"
        android:text="@string/txt_today"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvToday"
            android:layout_below="@+id/tvToday"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:id="@+id/tvMore"
        android:text="@string/txt_more"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_below="@+id/rcvToday"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvMore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvMore"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"></androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>



</FrameLayout>