<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".Fragment.SettingFragment">

    <TextView
        android:text="@string/action_setting"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_marginTop="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_settings"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/ic_account_white"
                android:layout_gravity="center"
                android:layout_width="38dp"
                android:layout_height="38dp"></ImageView>

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/txt_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>

        <ImageView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"></ImageView>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/txt_setting"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

<!--            <ExpandableListView-->
<!--                android:id="@+id/exListView"-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:dividerHeight="0dp"-->
<!--                android:divider="@color/light_black"-->
<!--                android:scrollbars="none"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"></ExpandableListView>-->

            <ListView
                android:id="@+id/lvSetting"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:divider="@color/light_black"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>
    </LinearLayout>



</FrameLayout>